2007-06-22  Andreas Kirschbaum

	* Fix map display issues. Implement fog-of-war and darkness
	display.

2007-06-17  Andreas Kirschbaum

	* Hide password input in login dialog box.

	* Update default key bindings.

	* Add tooltips for floor/spell/inventory object icons to display
	the object name.

2007-06-16  Andreas Kirschbaum

	* Implement repeat count for commands.

	* Implement lookat command by left-clicking in the map window.

	* Do not allow to drop locked items.

	* Make mouse bindings for mark/lock/apply/examine match the
	existing clients.

	* Maintain stable ordering of inventory objects when
	adding/removing/applying inventory objects.

2007-06-15  Andreas Kirschbaum

	* Make default-key binding for SHIFT+direction fire only once.

	* Increase text window size to make 'maps output fit without
	wrapping.

	* Use all available space in text window.

	* Accelerate text window output.

	* Suppress unnecessary redraws of gauges for unchanged values.

2007-06-14  Andreas Kirschbaum

	* Make bind and unbind commands work.

	* Make default key bindings work on any keyboard layout.

	* Key bindings file format changed to text format; the filename
	is now "keybindings.txt".

2007-06-12  Andreas Kirschbaum

	* Sort entries in metaserver list by hostname.

	* Disable start screen since only one option is implemented.

2007-06-10  Andreas Kirschbaum

	* Reduce CPU load.

2007-06-09  Andreas Kirschbaum

	* Accelerate map drawing; remove dependency to sixlegs png
	library.